--- a/style.css
+++ b/style.css
@@ -13,18 +13,17 @@ h1{
 
 section{
     display: flex;
+    margin-bottom: 100px;
 }
 
 .half-width{
     width: 50%;
-    padding: 0% 4%;
+    padding: 0% 6%;
 }
 
-.left-div{
-    padding: 4%;
-}
+
 .half-width img{
-    width: 80%;
+    width: 100%;
 }
 
 .link-button{
@@ -39,4 +38,11 @@ section{
 .top-section{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+  
 }
