--- a/style.css
+++ b/style.css
@@ -10,8 +10,10 @@ body{
 h1{
     font-size: 50px;
 }
-
-section{
+h2{
+    font-size: 40px;
+}
+.flex-display{
     display: flex;
     margin-bottom: 100px;
 }
@@ -45,4 +47,31 @@ section{
     background-repeat: no-repeat;
     background-position: right;
   
+}
+
+.experience-item{
+    box-shadow: 10px 10px 40px gray;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 20px;  
+    border-radius: 10px; 
+}
+
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+#item-1{
+    border-left: 6px solid tomato;
+}
+
+#item-2{
+    border-left: 6px solid blue;
+}
+
+footer p{
+    text-align: center;
 }
